--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "@storyblok/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.5.1",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.29.3",
     "next": "12.1.6",
+    "postcss": "^8.4.13",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "storyblok-js-client": "^4.5.2",
+    "storyblok-rich-text-react-renderer": "^2.5.3",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "eslint": "8.15.0",
