--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,19 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# IDE
+.idea
+.vscode
 
 # testing
 /coverage
