--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "@prisma/client": "3.14.0",
     "@storyblok/react": "^1.0.5",
     "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "prisma": "^3.14.0"
   }
 }
