--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write . && prisma format",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pull-components": "storyblok pull-components --space=156827",
+    "generate-sb-types": "storyblok-generate-ts source=./components.156827.json target=./component-types-sb"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -27,6 +29,8 @@
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "storyblok": "^3.10.5",
+    "storyblok-generate-ts": "^1.4.1",
     "storyblok-js-client": "^4.5.2",
     "storyblok-rich-text-react-renderer": "^2.5.3",
     "tailwindcss": "^3.0.24"
