--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@tailwindcss/forms": "^0.5.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "joi": "^17.6.0",
+    "libphonenumber-js": "^1.9.53",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.3",
     "next": "12.1.6",
