--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "3.14.0",
     "@storyblok/react": "^1.0.5",
     "@tailwindcss/forms": "^0.5.1",
+    "@vonage/server-sdk": "^2.10.11",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "joi": "^17.6.0",
