--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vonage/server-sdk": "^2.10.11",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "joi": "^17.6.0",
     "libphonenumber-js": "^1.9.53",
     "lodash-es": "^4.17.21",
