--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.8.8",
     "@prisma/client": "3.14.0",
     "@storyblok/react": "^1.0.5",
     "@tailwindcss/forms": "^0.5.1",
@@ -33,6 +34,7 @@
     "postcss": "^8.4.13",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
     "storyblok": "^3.10.5",
     "storyblok-generate-ts": "^1.4.1",
     "storyblok-js-client": "^4.5.2",
